--- a/İNDEX2.HTML
+++ b/İNDEX2.HTML
@@ -1,6 +1,10 @@
 <html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Reem+Kufi+Fun:wght@400..700&display=swap" rel="stylesheet">
+    
     <title>Size Chart</title>
     <style>
         body {
@@ -55,10 +59,14 @@
             font-weight: bold;
         }
     </style>
+    <style>
+@import url('https://fonts.googleapis.com/css2?family=Reem+Kufi+Fun:wght@400..700&display=swap');
+</style>
 </head>
 <body cz-shortcut-listen="true" style="position: relative;">
     <h2 style="color: red; text-align: center;">Size Chart Based on Height and Weight</h2>
     <div style="color: red; position: absolute; top: 400; right: 550; font-weight: bold; font-size: 30px; line-height: 50px;">For Bigger Body Size <br> Please Check Our <br> Adult Collection</div>
+    
 
 <table class="size-chart">
     <thead />
@@ -157,6 +165,8 @@
     </tbody>
 </table>
 <h2 style="color: red; text-align: center;">Vogue Home Decor</h2>
+
+<div class="arabic" style="font-family: 'Reem Kufi Fun', sans-serif; text-align: center; font-size: 50px;">الهدايا الإسلامية والديكورات الإسلامية</div>
 
 
 
